tests/paczka1/fuzzy1/96899912.err
Error in line 1: 79dakTu A129 42,9
Error in line 8: WQm A319 43,7
Error in line 13: WQm A129 91,1
Error in line 7: A129 A319 29,9
Error in line 14: WQm A319 58,0
Error in line 34: A129 S59 64,9
Error in line 37: pvVDHQn3cSg S59 35,5
